@@ -1,6 +1,8 @@
 ChangeLog for the Astro project.
 
 20191226:
+	* ensure that a failure to get mount data does not invalidate an
+	  exposure in the task queue
 	* add proper handling of gain in AsiCcd class
 	* change default gain value to -1, which means that the current
 	  gain of the camera should be used
